--- a/css/tabletPortrait.css
+++ b/css/tabletPortrait.css
@@ -7,3 +7,7 @@ body {
 
 .content {
 }
+
+.infoBox {
+	max-width:100px;
+}
